# LabaCL

./: .gitmodules  CMakeLists.txt  README.md  labLib.cl
backend/compiler/: compiler.hpp
backend/interpreter/: interpreter.cpp  interpreter.hpp
common/: errorDetector.hpp  locator.hpp  nAryTree.hpp
common/InputHandler/: InputHandler.hpp
examples/: recursive_factorial.cl.preprocessed  test  tex_example.cl
examples/funcTests/: test1.cl  test10.cl  test11.cl  test12.cl  test13.cl  test14.cl  test15.cl  test16.cl  test17.cl  test2.cl  test3.cl  test4.cl  test5.cl  test6.cl  test7.cl  test8.cl  test9.cl
examples/notWorked/: notWorked1.cl  notWorked2.cl  notWorked3.cl  notWorked4.cl  notWorked5.cl  notWorked6.cl  printExample.cl
examples/worked/: euqlid.cl  factorial.cl  fibonacci.cl  printExample.cl  recursiveFactorial.cl  recursiveFibonacci.cl  worked1.cl  worked2.cl  worked3.cl  worked4.cl  worked5.cl  worked6.cl  worked7.cl  worked8.cl
extensions/: README.md
extensions/labacl/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
extensions/labacl/syntaxes/: labacl.tmLanguage.json
extensions/tests/: cf.cl  comments.cl  func.cl  scan_op.cl
frontend/AST/: ast.hpp
frontend/SemanticAnalyzer/: scopeTree.hpp  semantic.cpp  semantic.hpp
frontend/customLexer/: customLexer.cpp  customLexer.hpp
frontend/driver/: driver.cpp  driver.hpp
frontend/lexer/: paraCL.l
frontend/parser/: grammar.y
